# feature_raster

./: .gitignore  .travis.yml  LICENSE  README.md  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/original/: 1991.xlsx  2010.xlsx  2018.xlsx
data/original/raster/real_datasets/2001/: envelope_2001.img.xml  envelope_version_desarrollo.img.aux.xml
data/original/raster/real_datasets/2018/: envelope_2018.img.aux.xml  envelope_2018.img.xml
data/original/raster/small_datasets/: 1991.tif  1991.tif.aux.xml  2001.tif  2001.tif.aux.xml  2010.tif  2010.tif.aux.xml  2018.tif  2018.tif.aux.xml
data/original/vectorial/reals/1991_cobertures/: 1991_cobertures.dbf  1991_cobertures.shp  1991_cobertures.shx
docs/: quickstart.rst
feature_raster/: __init__.py
feature_raster/Sensors/: GeneralSensor.py  __init__.py
feature_raster/Sensors/Landsat/: Landsat5.py  Landsat8.py  __init__.py
feature_raster/Transformers/: CommonIndex.py  __init__.py
feature_raster/Transformers/Landsat/: Landsat5Transformer.py  Landsat8Transformer.py  LandsatCommonTransformer.py  __init__.py  indexes.py
feature_raster/exceptions/: __init__.py  some_exceptions.py
feature_raster/project_enums/: GeneralEnums.py  LandsatEnums.py  __init__.py
mis_transformaciones/: transformaciones_automaticas.ipynb
scripts/: test.sh  travis_gdal_install.sh  travis_proj_install.sh
tests/: __init__.py  paths.py
tests/integration/: test_landsat_8_transformers.py
tests/unit/: test_GeneralSensor.py  test_Landsat5.py  test_Landsat8.py  test_Landsat8RealData.py
(+20 files in other folders)
