[tool.poetry]
name = "feature_raster"
version = "0.1.0"
description = "This"
authors = ["Hector Patiño <hectorpatino24@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
geopandas = "^0.8.1"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
